--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li><a href="flower.html">Css still life sketch</a></li>
         <li><a href="hover.html">Hover</a></li>
         <li><a href="cha.html">Character Set</a></li>
+        <li><a href="grid.html">Grid</a></li>
       </ul>
     
     </div>
